test/functions/resolution/errors/fail-many-candidates.compopts
 # fail-many-candidates.default.good
--describe-candidates # fail-many-candidates.describe.good
--print-all-candidates # fail-many-candidates.all.good
--describe-candidates --print-all-candidates # fail-many-candidates.describe-all.good
