test/functions/resolution/errors/fail-many-candidates.describe-all.good
fail-many-candidates.chpl:16: error: unresolved call 'foo(1, "hello")'
fail-many-candidates.chpl:13: note: this candidate did not match: foo(a, b)
fail-many-candidates.chpl:13: note: because where clause evaluated to false
fail-many-candidates.chpl:1: note: this candidate did not match: foo(a: int, b: int)
fail-many-candidates.chpl:16: note: because actual argument #2 with type 'string'
fail-many-candidates.chpl:1: note: is passed to formal 'b: int(64)'
fail-many-candidates.chpl:4: note: this candidate did not match: foo(a: string, b: int)
fail-many-candidates.chpl:16: note: because actual argument #1 with type 'int(64)'
fail-many-candidates.chpl:4: note: is passed to formal 'a: string'
fail-many-candidates.chpl:7: note: this candidate did not match: foo(a: string, b: string)
fail-many-candidates.chpl:16: note: because actual argument #1 with type 'int(64)'
fail-many-candidates.chpl:7: note: is passed to formal 'a: string'
fail-many-candidates.chpl:10: note: this candidate did not match: foo(a: real, b: real)
fail-many-candidates.chpl:16: note: because actual argument #2 with type 'string'
fail-many-candidates.chpl:10: note: is passed to formal 'b: real(64)'
